# DeeplyAgentic

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: suggest-resource.yml
agent-decisions/: 001-separate-planner-executor.md  002-mcp-for-tools.md  003-validator-before-output.md  README.md
agent-prompts/: README.md  executor.md  orchestrator.md  planner.md  summarizer.md  validator.md
assets/: README.md
checklists/: README.md  launch-checklist.md
comparisons/: README.md
diagrams/: README.md
docs/: CNAME  index.html
quickstart/: README.md  multi_agent_pipeline.py  multi_agent_pipeline_ollama.py  pyproject.toml
reading-list/: README.md
the-agentic-stack/: CONTRIBUTING.md  README.md
